complete trading